* tests/dryrun.test: Use cmp instead of diff. (before, after): Create them within ../tests. (libtool): Set to `/bin/sh ./libtool' by default, but use LIBTOOL, SHELL and top_builddir from the environment if available.  For dry runs, use "$libtool -n". * tests/Makefile.am (CLEANFILES): Added before and after. * ltmain.in: Do not create links to object files in dry runs.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -48,6 +48,8 @@ TESTS_ENVIRONMENT = CC="$(CC)" CFLAGS="$(CFLAGS)" CPPFLAGS="$(CPPFLAGS)" \
 
 EXTRA_DIST = defs $(TESTS)
 
+CLEANFILES = before after # created by dryrun.test
+
 # We need to remove any files that the above tests created.
 clean-local:
 	-test -f ../cdemo/Makefile && cd ../cdemo && $(MAKE) distclean
