--- a/ltconfig.in
+++ b/ltconfig.in
@@ -1321,8 +1321,10 @@ else
     ;;
 
   sco3.2v5*)
-    archive_cmds='$LD -G -o $lib $libobjs $deplibs $linkopts'
-    hardcode_direct=yes
+   archive_cmds='$LD -G -h $soname -o $lib $libobjs $deplibs $linkopts'
+   hardcode_shlibpath_var=no
+   runpath_var=LD_RUN_PATH
+   hardcode_runpath_var=yes
     ;;
 
   solaris*)
