* ltconfig.in (solaris*, whole_archive_flag_spec): Use -z allextract/defaultextract from Solaris 2.6 on. Reported by Brian Ford <ford@vss.fsi.com>

--- a/ltconfig.in
+++ b/ltconfig.in
@@ -1335,6 +1335,11 @@ else
 		$LD -G${allow_undefined_flag} -M $lib.exp -h $soname -o $lib $libobjs $deplibs $linkopts~$rm $lib.exp'
     hardcode_libdir_flag_spec='-R$libdir'
     hardcode_shlibpath_var=no
+    case "$host_os" in
+    solaris2.[0-5] | solaris2.[0-5].*) ;;
+    *) # Supported since Solaris 2.6 (maybe 2.5.1?)
+      whole_archive_flag_spec='${wl}-z ${wl}allextract$convenience ${wl}-z ${wl}defaultextract' ;;
+    esac
     ;;
 
   sunos4*)
