--- a/configure.in
+++ b/configure.in
@@ -42,6 +42,9 @@ AC_PROG_AWK
 dnl Check for dlopen support
 AC_LIBTOOL_DLOPEN
 AC_LIBTOOL_SETUP
+AC_SUBST(DLLTOOL)
+AC_SUBST(OBJDUMP)
+AC_SUBST(AS)
 
 LIBTOOL_FLAGS="$libtool_flags"
 AC_SUBST(LIBTOOL_FLAGS)
